name:                aoc2017
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/amirci/aoc2017#readme
license:             BSD3
license-file:        LICENSE
author:              Amir Barylko
maintainer:          amir@barylko.com
copyright:           Copyright: (c) 2016 Amir Barylko
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                    ,  split
                    ,  containers
                    ,  pureMD5
                    ,  bytestring
                    ,  mtl
                    ,  parsec
                    ,  matrix
  exposed-modules:     Day8
  default-language:    Haskell2010

test-suite aoc2017-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, test
  main-is:             Spec.hs
  build-depends:       base
                     , aoc2017
                     , hspec
                     , QuickCheck
                     , split
                     , pureMD5
                     , containers
                     , bytestring
                     , parsec
                     , mtl
                     , matrix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/amirci/aoc2017
